--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,4 @@ tokio = { version = "1", features = ["full"] }
 tracing = { version = "0.1", features = ["log"] }
 tracing-subscriber = { version = "0.3.18" }
 clap = { version = "4", features = ["derive", "env"] }
-dotenv = { version = "0.15" }
-axum = { version = "0.7" }
+dotenvy = { version = "0.15" }
