--- a/crates/clockin/Cargo.toml
+++ b/crates/clockin/Cargo.toml
@@ -10,13 +10,10 @@ tokio.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 clap.workspace = true
-dotenv.workspace = true
-axum.workspace = true
+dotenvy.workspace = true
 
 serde = { version = "1.0.197", features = ["derive"] }
-sqlx = { version = "0.7.3", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time"] }
 uuid = { version = "1.7.0", features = ["v4"] }
-tower-http = { version = "0.5.2", features = ["cors", "trace"] }
 dirs = "6.0.0"
 serde_json = "1.0.140"
 chrono = { version = "0.4.40", features = ["serde"] }
